@@ -11,6 +11,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Fix minor memory leaks
   * Reduce Jack process callback overhead
   * Remove Gtk2 interface
+  * Remove limits on the size of messages sent from plugin to UI
   * Remove transport position dumping from Jack process callback
   * Replace use of deprecated Gtk interfaces
   * Switch to external zix dependency
@@ -18,7 +19,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Use fewer platform-specific APIs
   * Use portable zix filesystem API
 
- -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 23:44:55 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 23:45:08 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
